# model_deployment_process

./: README.md  pyproject.toml
app/: auth.py  main.py  model_service.py  schemas.py
frontend/: app.py
